<resources>

    <string name="facebook_app_id">242135946274395</string>

    <string name="fb_login_protocol_scheme">fb242135946274395</string>

    <!--Login-->
    <string name="app_name">GranaControl</string>
    <string name="granaControl">Grana Control</string>
    <string name="usuario">Usuário</string>
    <string name="senha">Senha</string>
    <string name="continuar">Continuar</string>
    <string name="insiraUsuario">Insira Usuário!</string>
    <string name="insiraSenha">Insira Senha!</string>
    <string name="naoUtilizeEspaco">Não utilize espaços!</string>
    <string name="senhaInvalida">Senha inválida!</string>
    <string name="menuInformacao">Informação</string>
    <string name="despedidaLogout">Até logo!</string>
    <string name="sobre">Grana Control \n
                            &#160;&#160;Te ajuda controlar sua grana, \n
                            e a não ficar devendo as cueca! \n \n
                            APP by Diego Mobile Solutions</string>

    <!--Alertas-->
    <string name="configuracaoAlertas">Alertas</string>
    <string name="alertaGastoDiario">Alerta de Gasto Diário:</string>
    <string name="alertaGastoMensal">Alerta de Gasto Mensal:</string>
    <string name="salvar">Salvar</string>
    <string name="alertasConfigurados">Alertas Configurados!</string>

    <string-array name="meses">
        <item>Janeiro</item>
        <item>Fevereiro</item>
        <item>Março</item>
        <item>Abril</item>
        <item>Maio</item>
        <item>Junho</item>
        <item>Julho</item>
        <item>Agosto</item>
        <item>Setembro</item>
        <item>Outubro</item>
        <item>Novembro</item>
        <item>Dezembro</item>
    </string-array>

    <!--Diario-->
    <string name="controleDiario">Diário</string>
    <string name="entrada">Entrada</string>
    <string name="saida">Saída</string>
    <string name="descricao">Descrição</string>
    <string name="remove">Remove</string>
    <string name="grana">Grana:</string>
    <string name="avisoValor">Insira um valor!</string>
    <string name="erroRemover">Erro ao Remover!</string>
    <string name="menuRelatorio">Relatório</string>
    <string name="menuConfigAlerta">Alertas</string>
    <string name="menuAjuda">Ajuda</string>
    <string name="ajuda">Ajuda - GranaControl \n \n \n
                            - Utilize o campo "Grana" para valor, \n
                            para auxiliar no preenchimento deslize a barra. \n \n
                            - Coloque uma descrição. \n \n
                            - Para valor recebido utilize o botão "Entrada". \n \n
                            - Para valor gasto utilize o botão "Saída". \n \n
                            - Para apagar algum valor utilize a lixeira. \n \n \n

                            Mais dúvidas contate-nos! \n
                            diegojs@gmail.com</string>

    <!--RelatorioGeral-->
    <string name="relatorioGeral">Relatório Geral</string>
    <string name="anoPesquisa">Ano:</string>
    <string name="mesPesquisa">Mês:</string>
    <string name="saldo">Saldo</string>
    <string name="dia">Dia</string>
    <string name="entradaRel">Total Entrada</string>
    <string name="saidaRel">Total Saída</string>
    <string name="descricaoRel">Descrição</string>
    <string name="gerar">Gerar</string>
    <string name="semRegistros">Não há registros para esta data!</string>

    <string-array name="anos">
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
    </string-array>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>


    <!--ALertas-->
    <string name="alertaMensal">ALERTA DE GASTO MENSAL !!!</string>
    <string name="alertaDiario">ALERTA DE GASTO DIÁRIO !!!</string>



    <string name="logoff">Sair</string>




</resources>
