<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">


    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        android:gravity="center"
        android:orientation="vertical">

        <include
            layout="@layout/include_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@color/colorBackground"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="5dp">

            <!-- ANO INICIAL ################################################################ -->
            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                card_view:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:paddingLeft="50dp"
                    android:paddingRight="50dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/anoPesquisa"
                        android:textStyle="bold"
                        android:layout_weight="1"/>

                    <Spinner
                        android:id="@+id/spinnerAnos"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        />

                </LinearLayout>
            </android.support.v7.widget.CardView>
            <!-- ############################################################################### -->



            <!-- MES INICIAL ################################################################ -->
            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                card_view:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:paddingLeft="50dp"
                    android:paddingRight="50dp">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:text="@string/mesPesquisa"
                        android:textStyle="bold" />

                    <Spinner
                        android:id="@+id/spinnerMeses"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_marginLeft="35dp"
                        android:layout_gravity="center"
                        android:layout_weight="1" />

                </LinearLayout>
            </android.support.v7.widget.CardView>
            <!-- ############################################################################### -->

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:layout_weight="2"
                card_view:cardCornerRadius="10dp">

                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    xmlns:tools="http://schemas.android.com/tools"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <android.support.v7.widget.Toolbar
                        android:id="@+id/toolbarTotalDia"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:background="@color/colorButton"
                        android:elevation="8dp"
                        app:titleTextColor="@color/colorWhite">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_weight="1"
                                android:text="@string/dia"
                                android:textAlignment="center"
                                android:textColor="@color/colorWhite"
                                android:textStyle="bold" />

                            <View
                                android:layout_width="1dp"
                                android:layout_height="match_parent"
                                android:layout_marginLeft="5dp"
                                android:layout_marginRight="5dp"
                                android:background="@color/colorWhite" />

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_weight="1"
                                android:text="@string/entradaRel"
                                android:textAlignment="center"
                                android:textColor="@color/colorWhite"
                                android:textStyle="bold" />



                            <View
                                android:layout_width="1dp"
                                android:layout_height="match_parent"
                                android:layout_marginLeft="5dp"
                                android:layout_marginRight="5dp"
                                android:background="@color/colorWhite" />

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_weight="1"
                                android:text="@string/saidaRel"
                                android:textAlignment="center"
                                android:layout_marginRight="5dp"
                                android:textColor="@color/colorWhite"
                                android:textStyle="bold" />

                        </LinearLayout>
                    </android.support.v7.widget.Toolbar>

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/rvTableRelatorioDia"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/toolbarTotalDia"
                        tools:context="diegocompany.granacontrol.views.RelatorioGeral" />

                </LinearLayout>

            </android.support.v7.widget.CardView>


            <!-- ############################################################################### -->


            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                card_view:cardCornerRadius="10dp">

                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    xmlns:tools="http://schemas.android.com/tools"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <android.support.v7.widget.Toolbar
                        android:id="@+id/toolbarTotal"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:background="@color/colorButton"
                        android:elevation="8dp"
                        app:titleTextColor="@color/colorWhite">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_weight="1"
                                android:text="@string/entradaRel"
                                android:textAlignment="center"
                                android:textColor="@color/colorWhite"
                                android:textStyle="bold" />


                            <View
                                android:layout_width="1dp"
                                android:layout_height="match_parent"
                                android:layout_marginLeft="5dp"
                                android:layout_marginRight="5dp"
                                android:background="@color/colorWhite" />


                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_weight="1"
                                android:text="@string/saidaRel"
                                android:textAlignment="center"
                                android:textColor="@color/colorWhite"
                                android:textStyle="bold" />


                            <View
                                android:layout_width="1dp"
                                android:layout_height="match_parent"
                                android:layout_marginLeft="5dp"
                                android:layout_marginRight="5dp"
                                android:background="@color/colorWhite" />

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginRight="5dp"
                                android:layout_weight="1"
                                android:text="@string/saldo"
                                android:textAlignment="center"
                                android:textColor="@color/colorWhite"
                                android:textStyle="bold" />

                        </LinearLayout>
                    </android.support.v7.widget.Toolbar>

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/rvTableRelatorio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/toolbarTotal"
                        tools:context="diegocompany.granacontrol.views.RelatorioGeral" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:background="@color/colorBackground"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="80dp"
            android:paddingRight="80dp"
            android:paddingBottom="5dp" >

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                card_view:cardCornerRadius="10dp">

                <Button android:id="@+id/buttonGerarRelatorio"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:background="@color/colorButton"
                    android:drawablePadding="5dp"

                    android:drawableTop="@drawable/gerar"
                    android:text="@string/gerar"
                    android:textAllCaps="false"
                    android:textAlignment="center"
                    android:padding="5dp"
                    android:textColor="@color/colorTextButton"
                    android:textStyle="bold"
                    android:layout_margin="7dp"
                    />

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_drawer_header"
        app:menu="@menu/nav_drawer_menu" />

</android.support.v4.widget.DrawerLayout>