<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_diario"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="2dp"
        android:layout_weight="2"
        card_view:cardCornerRadius="10dp">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorButton"
                android:elevation="8dp"
                app:titleTextColor="@color/colorWhite">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="horizontal">

                    <Space
                        android:layout_width="20dp"
                        android:layout_height="1dp" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:background="@color/colorWhite" />

                    <TextView
                        android:id="@+id/textViewEntrada"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:text="@string/entrada"
                        android:textAlignment="center"
                        android:textColor="@color/colorWhite"
                        android:textStyle="bold" />


                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:background="@color/colorWhite" />

                    <TextView
                        android:id="@+id/textViewSaida"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:text="@string/saida"
                        android:textAlignment="center"
                        android:textColor="@color/colorWhite"
                        android:textStyle="bold" />


                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:background="@color/colorWhite" />

                    <TextView
                        android:id="@+id/textViewDescricao"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:text="@string/descricao"
                        android:textAlignment="center"
                        android:textColor="@color/colorWhite"
                        android:textStyle="bold" />


                </LinearLayout>
            </android.support.v7.widget.Toolbar>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvTable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/toolbar"
                tools:context="diegocompany.granacontrol.views.Diario" />

        </LinearLayout>

    </android.support.v7.widget.CardView>


    <!-- GRANA  ################################################################ -->
    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="2dp"
        card_view:cardCornerRadius="10dp">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/grana"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editTextGrana"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:inputType="numberDecimal" />

            </LinearLayout>

            <SeekBar
                android:id="@+id/seekbarGrana"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="start|end"
                android:layout_marginRight="20dp"
                android:max="100000"
                android:padding="5dp"
                android:progressBackgroundTint="@color/colorButton"
                android:secondaryProgress="100000"
                android:secondaryProgressTint="@color/colorProgress" />

        </LinearLayout>

    </android.support.v7.widget.CardView>
    <!-- ############################################################################### -->

    <!-- Descricao  ################################################################ -->
    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="2dp"
        card_view:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/descricao"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextDescricao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </LinearLayout>

    </android.support.v7.widget.CardView>
    <!-- ############################################################################### -->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:padding="10dp"
        android:paddingStart="30dp">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/buttonEntrada"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:src="@drawable/plus" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/buttonSaida"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:src="@drawable/minus" />

    </LinearLayout>


</LinearLayout>
